@@ -1,8 +1,8 @@
 // -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; indent-tabs-mode: nil; -*-
 //
-// backward.h: Rcpp R/C++ interface class library -- 
+// export.h: Rcpp R/C++ interface class library -- export implementations 
 //
-// Copyright (C) 2012    Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2013    Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -19,16 +19,22 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-#ifndef Rcpp_api_meat_meat_h
-#define Rcpp_api_meat_meat_h
+#ifndef Rcpp_api_meat_export_h
+#define Rcpp_api_meat_export_h
 
-#include <Rcpp/api/meat/RObject.h>
-#include <Rcpp/api/meat/Environment.h>
-#include <Rcpp/api/meat/DottedPair.h>
-#include <Rcpp/api/meat/Vector.h>
-#include <Rcpp/api/meat/Matrix.h>
-#include <Rcpp/api/meat/Reference.h>
-#include <Rcpp/api/meat/is.h>
-#include <Rcpp/api/meat/export.h>
+namespace Rcpp{ 
+namespace internal{
+        
+    template <typename InputIterator, typename value_type>
+    void export_range__dispatch( SEXP x, InputIterator first, ::Rcpp::traits::r_type_generic_tag ) {
+        R_len_t n = ::Rf_length(x) ;
+        for( R_len_t i=0; i<n; i++, ++first ){
+            *first = ::Rcpp::as<value_type>( VECTOR_ELT(x, i) ) ;
+        }
+    }
+                
+    
+} // namespace internal
+} // namespace Rcpp
 
 #endif
